gcc/testsuite/rust/rustc/ui/consts/value-suggestion-ice-123906.rs
fn as_chunks<const N: usize>() -> [u8; N] {
    loop {
        break;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
    }
}

fn main() {}

